chore:update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,6 @@
 JWTKEY=209f24523nfpa9fsdanefbu34esdfsf
+MYSQL_USER=root
+MYSQL_DATABASE=reservations
+MYSQL_PASSWORD=
+MYSQL_HOST=localhost
+PORT=3000
