chore:add new mysql port

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 JWTKEY=209f24523nfpa9fsdanefbu34esdfsf
-MYSQL_USER=root
+MYSQL_USER=if0_37689301
 MYSQL_DATABASE=reservations
-MYSQL_PASSWORD=
-MYSQL_HOST=localhost
+MYSQL_PASSWORD=jQKOzsIjosIwO3C
+MYSQL_HOST=sql304.infinityfree.com
 PORT=3000
+
+
